--- a/src/components/components.css
+++ b/src/components/components.css
@@ -64,6 +64,7 @@ u {
 
 .logout {
   cursor: pointer;
+  text-transform: capitalize;
   text-align: center;
   font-weight: bold;
   border-bottom: #0958a3 dotted 3px;
@@ -71,6 +72,7 @@ u {
 
 .entries {
   max-width: 1100px;
+
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -92,7 +94,7 @@ u {
 
 .categoria-nombre {
   max-width: 350px;
-  max-height: 50px;
+  max-height: 35px;
 }
 
 .entry-details {
@@ -105,6 +107,13 @@ u {
   width: 320px;
   height: 340px;
   cursor: pointer;
+  border: white solid 5px;
+}
+
+.video-entries {
+  background-color: black;
+  width: 320px;
+  height: 340px;
   border: white solid 5px;
 }
 
@@ -313,6 +322,11 @@ u {
   }
 
   .image-entries {
+    width: 180px;
+    height: 200px;
+  }
+
+  .video-entries {
     width: 180px;
     height: 200px;
   }
