--- a/src/components/components.css
+++ b/src/components/components.css
@@ -75,7 +75,7 @@ u {
 
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 40px;
   justify-content: space-between;
 }
 
@@ -101,11 +101,12 @@ u {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 5px;
 }
 
 .image-entries {
   width: 320px;
-  height: 340px;
+  height: auto;
   cursor: pointer;
   border: white solid 5px;
 }
