--- a/src/index.css
+++ b/src/index.css
@@ -762,6 +762,7 @@ footer {
   .arrows-bottom {
     background-image: url(/public/media/picos-abajo-blanco.png);
     height: 32px;
+    margin-top: 100px;
   }
 
   /* Main Styles */
@@ -1100,5 +1101,5 @@ footer {
 }
 
 .vote-widget {
-  margin-bottom: 150px;
+  margin-bottom: 80px;
 }
