--- a/src/index.css
+++ b/src/index.css
@@ -230,6 +230,7 @@ nav .container ul li.active {
 .arrows-bottom {
   background-image: url(/public/media/picos-mobile-blanco.png);
   height: 24px;
+  margin-top: 30px;
 }
 
 /* Body */
@@ -719,6 +720,10 @@ footer {
   text-align: center;
 }
 
+.vote-widget {
+  margin-bottom: 30px;
+}
+
 /* Tablet Styles (min-width: 768px) and*/
 
 @media screen and (min-width: 768px) {
@@ -1098,8 +1103,8 @@ footer {
     padding-top: 0.5rem;
     font-size: 0.7rem;
   }
-}
 
-.vote-widget {
-  margin-bottom: 80px;
+  .vote-widget {
+    margin-bottom: 80px;
+  }
 }
