--- a/src/components/components.css
+++ b/src/components/components.css
@@ -274,7 +274,8 @@ u {
 
   .entries {
     flex-direction: row;
-    gap: 20px;
+    column-gap: 20px;
+    row-gap: 30px;
     flex-wrap: wrap;
     justify-content: space-evenly;
   }
