--- a/src/components/components.css
+++ b/src/components/components.css
@@ -187,6 +187,7 @@ u {
   text-align: center;
   border-radius: 6px;
   padding: 5px 0;
+  cursor: none;
 
   /* Position the tooltip */
   position: absolute;
