--- a/src/components/components.css
+++ b/src/components/components.css
@@ -49,7 +49,7 @@ u {
   justify-content: center;
   gap: 30px;
   align-items: center;
-  padding: 2rem 0 0 0;
+  padding: 2rem 0;
 }
 
 .logged-userInfo {
@@ -130,7 +130,8 @@ u {
   text-align: center;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-end;
+  gap: 1rem;
 }
 
 .art-details {
@@ -402,15 +403,16 @@ video {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 0;
   }
 
   .finalist-title {
     max-width: 230px;
   }
 
-  .counter {
-    flex-direction: column;
-  }
+  /* .counter {
+    flex-direction: row-reverse;
+  } */
 
   .tooltip .tooltiptext {
     /* Position the tooltip */
