--- a/src/components/components.css
+++ b/src/components/components.css
@@ -49,7 +49,7 @@ u {
   justify-content: center;
   gap: 30px;
   align-items: center;
-  padding: 2rem 0;
+  padding: 0 0 2.5rem;
 }
 
 .logged-userInfo {
@@ -203,6 +203,13 @@ u {
 }
 
 /* styles winners section */
+.thank-you {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  text-transform: uppercase;
+  font-weight: 800;
+}
+
 .category-winner {
   padding-bottom: 50px;
 }
@@ -339,7 +346,7 @@ video {
     justify-content: center;
     gap: 30px;
     align-items: center;
-    padding: 3rem 0 1rem 0;
+    padding: 0 0 1rem 0;
   }
 
   .logged-userInfo {
@@ -427,6 +434,12 @@ video {
   }
 
   /* Winners section */
+
+  .thank-you {
+    padding-top: 5rem;
+    text-transform: uppercase;
+  }
+
   .category-winner {
     padding-bottom: 30px;
   }
